images for case study

--- a/rbcpathway.html
+++ b/rbcpathway.html
@@ -84,7 +84,7 @@
 
 					<p class="project-desc">The participants were asked to write down some of the challenges they face in their day-to-day lives at work on sticky notes. Afterwards Dan, Emily, and I clustered the stickies into common themes and the participants were given three sticky dots to vote for which challenges were most important to solve for.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/pathway1.jpeg"></div>
+					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/pathway1.jpeg"></div>
 					<p class="caption">The resulting groupings/themes from the problem framing session include: context, redundancy in work, awareness, efficiency, challenging your research, finding research, organization, sharing/cultural, technical, quality/reliability.</p>
 
 
@@ -121,13 +121,13 @@
 					
 					<p class="project-desc">After conducting interviews, we wanted to dig deeper based on the information we discovered through the interviews. We wanted to understand how users shared information across enterprises, barriers to knowledge sharing, and extrinsic/intrinsic motivations on why people share. We looked through research papers, case studies, articles, and wrote down interesting findings on sticky notes and added them to our synthesis wall.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/pathway2.jpeg"></div>
+					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/pathway2.jpeg"></div>
 					<p class="caption">As RBC did not have a dedicated workspace for researchers and designers, we went on multiple floors and rooms to do our affinity diagramming (this took us a while as we had to take them down and put them back up).</p>
 
 					<h3 class="proj-subtitle">Research Findings</h3>
 					<p class="project-desc">Our primary and secondary research was summarized and clustered into themes using a research method technique known as affinity diagramming. This technique helped us organize our data points into meaningful and manageable themes.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/pathway3.jpeg"></div>
+					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/pathway3.jpeg"></div>
 					<p class="caption">We ended up stealing a touch-down room and stayed in there for five days until we were kicked out.</p>
 
 					<p class="project-desc">Here are some sample insights that we crafted from the data we synthesized:</p>
@@ -157,7 +157,7 @@
 
 					<p class="project-desc">A primary evidence-based persona was developed using the research we conducted as a team. In this persona we outlined user goals, behaviours, current pains, values, tools used and their needs and desires with respect to finding, sharing, using and documenting research. This is a draft of our persona and will be continuously developed with further research in the future when the project is handed over to next team that will work on this project. </p>
 
-					<div class="projectMock"><img class="projectMock" src="images/pathway4.png"></div>
+					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/pathway4.png"></div>
 
 				</div>
 
