--- a/uiuxwork.html
+++ b/uiuxwork.html
@@ -60,7 +60,7 @@
 			<!-- Hack the North Mobile App -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a class="projectPic"><img src="images/RBCPathway_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a class="projectPic"><img src="images/HTT_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">Hack the Throne Web Design</h3>
 					<h4 class="projectDate">April 2017</h4>
@@ -72,7 +72,7 @@
 			<!-- Clear Spider Redesign -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a class="projectPic"><img src="images/RBCPathway_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a class="projectPic"><img src="images/Clearspider_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">Clear Spider UI/UX Redesign</h3>
 					<h4 class="projectDate">February 2017</h4>
