added to rbc case study

--- a/rbcpathway.html
+++ b/rbcpathway.html
@@ -169,13 +169,39 @@
 					<p class="project-desc">Due to time and budget constraints, we were not able to hold an ideation workshop with participants. Instead we hosted an ideation session with just Emily, Dan and I. We started the ideation session by generating ideas solo. We took some time to generate some ideas and generate some low-fi mockups. Later, we shared our ideas with eachother, gave feedback, and listed pros and cons of each proposed solution. Afterwards we took the best ideas and pulled them into the final solution. While thinking about the solution, we made sure to reference insight statements, the persona, research themes, and the revised HMW statement.</p>
 
 					<div class="image2">
-						<img class="projectMock" src="images/pathway6.jpg">
-						<img class="projectMock" src="images/pathway7.jpg">
+						<img class="side" src="images/RBC_Pathway/pathway5.jpg">
+						<img class="side" src="images/RBC_Pathway/pathway6.jpg">
 					</div>
-					<div class="projectMock"><img class="projectMock" src="images/pathway5.jpg"></div>
-					<p class="caption">Some rough sketches from our ideation sesson.</p>
+					<p class="caption">Some rough sketches from our ideation sesson.</p>	
 
-					
+				</div>
+
+				<!-- Prototype -->
+
+				<div class="overview">
+					<h3 class="project-title">Prototype</h3>
+
+					<p class="project-desc">Because of the time we had left before our internships ended, we only had a limited time to design our screens and flows. Ideally more sketching and brainstorming should've been put into this phase of our project. We wanted to keep our screens simple, minimal, and clean. We used the RBC Visual Design guidelines to help us create a colour palette and as well as following the icons and CTAs RBC used.</p>
+
+					<p class="project-desc">During the ideation session, we struggled with thinking how to solve the third insight: "Sharing is not a proactive part of the design process. Researchers primarily share when there is a request from another individual or team." We didn't want to make another another database of documents as we have already saw that it did not work at RBC (there was a database of research on RBC called Thinkr which no one uses or has heard of). My UX Design Professor taught us that users are lazy so we tried to figure out ways to assist designers and researchers with making the process of sharing much more easier and seamless. Our solution to this problem was creating a "project tree" to help users easily document the research process and sharing that process with other researchers and stakeholders across the bank.</p>
+
+					<div class="projectMock"><img class="projectMockWhite" src="images/RBC_Pathway/projecttree.jpg"></div>
+					<p class="caption">High-Fidelity Mockup of the Project Tree</p>
+
+					<p class="project-desc">In the project tree, users are able to document "Stages" and "Methods". "Stages" (the larger box filling the full width of the container) refer to a key step in the design process such as pre-discovery or research synthesis while "Methods" (box filling half the width of the container) refers to a method used during that "stage" such as problem framing in the pre-discovery phase or conducting interviews in the research phase.</p>
+
+					<div class="projectMock"><img class="projectMockWhite" src="images/RBC_Pathway/projecthelp.png"></div>
+					<p class="caption">This box will appear when you hover over the "?" icon and will give the user info on that certain design process or method.</p>
+
+					<p class="project-desc">We also wanted to further the design field at RBC (which at the time we were there, was underdeveloped). Very few teams at RBC were educated about user research and design thinking so we wanted to help employees learn more about these processes so that they can create better products and make better decisions. On this web app, we create a resources page where users can find suggested books, how-to's, and guides on research methods and processes. On the project tree, on both methods and stages, users are able to hover over the "?" icon to learn more about a certain process or method. When creating a new method or stage on a project tree, we have preset stages and methods that would link back to resources page.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/projectstep.png"></div>
+					<p class="caption">When typing in a process or method, we give preset suggestions to the user.</p>
+
+					<p class="project-desc">The great thing about this feature is that we were able to educate users on design processes and methods if they didn't know how to create a research plan for their project. We also had different preset templates for the users if they had no knowledge on research to guide them in the right direction. Users were also able to create their own templates or duplicate trees so that they can document their research much faster.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/projecttemplate.png"></div>
+					<p class="caption">Users are able to select any preset templates for their project tree.</p>
 
 				</div>
 
