added hack the throne project page

--- a/rbcpathway.html
+++ b/rbcpathway.html
@@ -31,7 +31,7 @@
 			<div class="metaDesc">
 				<div class="metaLeft">
 					<p class="infoA">Type of Work</p>
-					<p class="infoB">UI/UX Design</p>
+					<p class="infoB">Product Design</p>
 					<p class="infoA">Languages and Tools</p>
 					<p class="infoB">Figma, InVision and ReactJS</p>
 				</div>
@@ -193,7 +193,7 @@
 					<div class="projectMock"><img class="projectMockWhite" src="images/RBC_Pathway/projecthelp.png"></div>
 					<p class="caption">This box will appear when you hover over the "?" icon and will give the user info on that certain design process or method.</p>
 
-					<p class="project-desc">We also wanted to further the design field at RBC (which at the time we were there, was underdeveloped). Very few teams at RBC were educated about user research and design thinking so we wanted to help employees learn more about these processes so that they can create better products and make better decisions. On this web app, we create a resources page where users can find suggested books, how-to's, and guides on research methods and processes. On the project tree, on both methods and stages, users are able to hover over the "?" icon to learn more about a certain process or method. When creating a new method or stage on a project tree, we have preset stages and methods that would link back to resources page.</p>
+					<p class="project-desc">We also wanted to further the design field at RBC (which at the time we were there, was underdeveloped). Very few teams at RBC were educated about user research and design thinking so we wanted to help employees learn more about these processes so that they can create better products and make better decisions. On this web app, we created a resources page where users can find suggested books, how-to's, and guides on research methods and processes. On the project tree, on both methods and stages, users are able to hover over the "?" icon to learn more about a certain process or method. When creating a new method or stage on a project tree, we have preset stages and methods that would link back to resources page.</p>
 
 					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/projectstep.png"></div>
 					<p class="caption">When typing in a process or method, we give preset suggestions to the user.</p>
@@ -202,6 +202,26 @@
 
 					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/projecttemplate.png"></div>
 					<p class="caption">Users are able to select any preset templates for their project tree.</p>
+
+					<p class="project-desc">As mentioned previously, we didn't want to make Pathway look and feel like a database or else no would want to use it. We wanted make Pathway to look more simlpe and easy to navigate so we made the "Find Projects" page filled with projects on cards. This way it would much easier for the user to find what they are looking for. On this page, your feed is filled with suggested projects based on what the user has liked and on the user's preferences (users select what they are interested in when they first sign up). As Pathway is a new product there would be no projects at all so we decided that this page would be not be the landing page until projects start filling up. </p>
+
+					<div class="projectMock"><img class="projectMockWhite" src="images/RBC_Pathway/findprojects.png"></div>
+					<p class="caption">Users can find suggested projects or search on the "Find Projects" page.</p>
+
+					<p class="project-desc">At RBC, employees are under a team that is under an area of the bank (e.g. I was under Employee Digital Experience Architecture which is under Enterprise Architecture). On Pathway, users are able to create teams with their respective colleagues and can collaborate more easily on their project trees. Users are also able to find teams and follow them as well and get updates when a team or individual has made a change to their projects or shared their work.</p>
+
+					<div class="projectMock"><img class="projectMockWhite" src="images/RBC_Pathway/projectsteam.png"></div>
+					<p class="caption">On the team profile, you can see who's on that team and projects they've worked on.</p>
+
+				</div>
+
+				<!-- User Flows -->
+
+				<div class="overview">
+					<h3 class="project-title">Site Map &amp; User Flows</h3>
+
+					<p class="project-desc">Because of the time we had left before our internships ended, we only had a limited time to design our screens and flows. Ideally more sketching and brainstorming should've been put into this phase of our project. We wanted to keep our screens simple, minimal, and clean. We used the RBC Visual Design guidelines to help us create a colour palette and as well as following the icons and CTAs RBC used.</p>
+
 
 				</div>
 
