--- a/uiuxwork.html
+++ b/uiuxwork.html
@@ -57,15 +57,15 @@
 				</div>
 			</div>
 
-			<!-- Hack the North Mobile App -->
+			<!-- Hack the Throne -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a class="projectPic"><img src="images/HTT_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a class="projectPic" href="hackthethrone.html"><img src="images/HTT_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">Hack the Throne Web Design</h3>
 					<h4 class="projectDate">April 2017</h4>
 					<p class="projectMeta">As a designer on the Hack the North organizing team, I was given the opportunity to lead the design of our April fool's joke, Hack the Throne.</p>
-					<a class="viewWork" href="rbcpathway.html">View Project</a>
+					<a class="viewWork" href="hackthethrone.html">View Project</a>
 				</div>
 			</div>
 
