--- a/hackthethrone.html
+++ b/hackthethrone.html
@@ -26,12 +26,12 @@
 			</nav>
 
 			<h1 class="projectTitle">Hack the Throne</h1>
-			<h3 class="projectSubtitle">A new tool for UX designers and researchers</h3>
+			<h3 class="projectSubtitle">The greatest Hackathon that never happened</h3>
 			
 			<div class="metaDesc">
 				<div class="metaLeft">
 					<p class="infoA">Type of Work</p>
-					<p class="infoB">Web Design</p>
+					<p class="infoB">Web Design, Branding</p>
 					<p class="infoA">Languages and Tools</p>
 					<p class="infoB">Figma</p>
 				</div>
@@ -44,15 +44,20 @@
 				</div>
 			</div>
 
-			<div class="projectMock"><img class="projectMock" src="images/HTT_Mockup.jpg"></div>
-
 			<div class="portfolioDesc">
 
 				<!-- Background -->
 
 				<div class="overview">
-					<p class="project-desc">During my internship at the Royal Bank of Canada, I was given the opportunity to lead a project from start to finish with other fellow co-op students, <a href="https://www.linkedin.com/in/danielkim5/" class="person" target="_blank">Daniel Kim</a> and <a href="https://www.linkedin.com/in/emilymacgowan/" class="person" target="_blank">Emily MacGowan</a>. The problem that we were given by our managers is that at RBC, many employees do not share their research findings and we wanted to figure out why that is happening and how we can solve that problem.</p>
+					<p class="project-desc">Every year at Hack the North, we have a tradition of creating a fake hackathon as an April Fool's joke. We also use this joke to promote Hack the North and as well as to help us prepare for what's to come when we plan for the actual hackathon in the summer. We go all out and this includes creating the content, creating social media accounts and posts, copywriting, designing the website, and implementing it. It took us a while to figure out our joke for April fools but in the end, we thought it would be really funny if we had a medieval hackathon. It would've been held at Casa Loma, a castle in Toronto, and there would be workshops called "Pit of Pythons" and "The Quest for Ruby".</p>
 				</div>
+
+				<div class="overview">
+					<p class="project-desc">For this project, I was in charge of creating graphics, branding, and the design of the website itself. My main inspiration for this design was old school MMORPGs (e.g. Runescape) and fantasy digital art. This was my first time creating designs for a website and I learned a lot from responsive design to assisting developer hand-off. <a href="https://hackthethrone.com" class="person" target="_blank">Check out the implemented website here!</a></p>
+				</div>
+
+				<div class="projectMock"><img class="projectMock" src="images/hackthethrone.png"></div>
+				<p class="caption">Mockup of the final design.</p>
 
 			</div>
 		</div>
