added 3 column layout

--- a/rbcpathway.html
+++ b/rbcpathway.html
@@ -19,7 +19,7 @@
 					
 				<div class="navRight">
 				<a href="uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="#" class="navLink">Graphic Design</a>
+				<a href="graphicdesign.html" class="navLink">Graphic Design</a>
 				<a href="#" class="navLink">Photography</a>
 				<a href="#" class="navLink">About</a>
 				</div>
