--- a/uiuxwork.html
+++ b/uiuxwork.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>UI/UX Work</title>
+		<title>UI/UX Design</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="main.css">
@@ -20,7 +20,7 @@
 					
 				<div class="navRight">
 				<a href="uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="#" class="navLink">Graphic Design</a>
+				<a href="graphicdesign.html" class="navLink">Graphic Design</a>
 				<a href="#" class="navLink">Photography</a>
 				<a href="#" class="navLink">About</a>
 				</div>
@@ -28,7 +28,7 @@
 
 			<!-- Title -->
 
-			<h1 class="portfolioTitle">UI/UX Work</h1>
+			<h1 class="portfolioTitle">UI/UX Design</h1>
 			<p class="work-description">I love solving design problems and creating beautiful screens.</p>
 
 			<!-- Work -->
@@ -48,12 +48,12 @@
 			<!-- Hack the North Mobile App -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a class="projectPic"><img src="images/HTNMobile_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a href="HTNmobile_app.html" class="projectPic"><img src="images/HTNMobile_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">Hack the North 2017 Mobile App Redesign</h3>
 					<h4 class="projectDate">Summer 2017</h4>
 					<p class="projectMeta">As a designer on the Hack the North organizing team, I was given the opportunity to work on the redesign of the user experience and visual design of the 2017 mobile app.</p>
-					<a class="viewWork" href="rbcpathway.html">View Case Study</a>
+					<a class="viewWork" href="HTNmobile_app.html">View Case Study</a>
 				</div>
 			</div>
 
@@ -72,12 +72,12 @@
 			<!-- Clear Spider Redesign -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a class="projectPic"><img src="images/Clearspider_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a href="clearspider.html" class="projectPic"><img src="images/Clearspider_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">Clear Spider UI/UX Redesign</h3>
 					<h4 class="projectDate">February 2017</h4>
 					<p class="projectMeta">Clear Spider, a company known for it's cloud-based inventory management system, hosted a 2-day UI/UX Case Competition where we had to redesign the user experience and interface of their system. </p>
-					<a class="viewWork" href="rbcpathway.html">View Case Study</a>
+					<a class="viewWork" href="clearspider.html">View Case Study</a>
 				</div>
 			</div>
 
