--- a/HTNmobile_app.html
+++ b/HTNmobile_app.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Hack the Throne</title>
+		<title>Hack the North 2017 Mobile App</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="main.css">
@@ -25,13 +25,13 @@
 				</div>
 			</nav>
 
-			<h1 class="projectTitle">Hack the Throne</h1>
+			<h1 class="projectTitle">Hack the North 2017 Mobile App</h1>
 			<h3 class="projectSubtitle">The greatest Hackathon that never happened</h3>
 			
 			<div class="metaDesc">
 				<div class="metaLeft">
 					<p class="infoA">Type of Work</p>
-					<p class="infoB">Web Design, Branding</p>
+					<p class="infoB">Product Design</p>
 					<p class="infoA">Languages and Tools</p>
 					<p class="infoB">Figma</p>
 				</div>
@@ -40,7 +40,7 @@
 					<p class="infoA">Organization</p>
 					<p class="infoB"><a href="https://hackthenorth.com/" class="person" target="_blank">Hack the North</a></p>
 					<p class="infoA">Date</p>
-					<p class="infoB">April 2017</p>
+					<p class="infoB">Summer 2017</p>
 				</div>
 			</div>
 
@@ -51,13 +51,6 @@
 				<div class="overview">
 					<p class="project-desc">Every year at Hack the North, we have a tradition of creating a fake hackathon as an April Fool's joke. We also use this joke to promote Hack the North and as well as to help us prepare for what's to come when we plan for the actual hackathon in the summer. We go all out and this includes creating the content, creating social media accounts and posts, copywriting, designing the website, and implementing it. It took us a while to figure out our joke for April fools but in the end, we thought it would be really funny if we had a medieval hackathon. It would've been held at Casa Loma, a castle in Toronto, and there would be workshops called "Pit of Pythons" and "The Quest for Ruby".</p>
 				</div>
-
-				<div class="overview">
-					<p class="project-desc">For this project, I was in charge of creating graphics, branding, and the design of the website itself. My main inspiration for this design was old school MMORPGs (e.g. Runescape) and fantasy digital art. This was my first time creating designs for a website and I learned a lot from responsive design to assisting developer hand-off. <a href="https://hackthethrone.com" class="person" target="_blank">Check out the implemented website here!</a></p>
-				</div>
-
-				<div class="projectMock"><img class="projectMock" src="images/hackthethrone.png"></div>
-				<p class="caption">Mockup of the final design.</p>
 
 			</div>
 		</div>
