made index page

--- a/photography.html
+++ b/photography.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Graphic Design &amp; Illustration</title>
+		<title>Photography</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="main.css">
@@ -20,16 +20,16 @@
 					
 				<div class="navRight">
 				<a href="uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="" class="navLink">Graphic Design</a>
-				<a href="Photography.html" class="navLink">Photography</a>
+				<a href="graphicdesign.html" class="navLink">Graphic Design</a>
+				<a href="#" class="navLink">Photography</a>
 				<a href="#" class="navLink">About</a>
 				</div>
 			</nav>
 
 			<!-- Title -->
 
-			<h1 class="portfolioTitle">Graphic Design &amp; Illustration</h1>
-			<p class="work-description">In my spare time, I love making digital art and creating posters. Originally I started doing Graphic Design first earlier in high school.</p>
+			<h1 class="portfolioTitle">Photography</h1>
+			<p class="work-description">If you don't see me sitting behind the computer designing, I'll be around the city shooting the streets.</p>
 
 			<div class="imageContainerMW">
 				<a class="projectPicContainer" href="rbcpathway.html"><img class="fullwidth" src="images/graphic_design/samurai.jpg"></a>
