--- a/uiuxwork.html
+++ b/uiuxwork.html
@@ -21,7 +21,7 @@
 				<div class="navRight">
 				<a href="uiuxwork.html" class="navLink">UI/UX</a>
 				<a href="graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="#" class="navLink">Photography</a>
+				<a href="Photography.html" class="navLink">Photography</a>
 				<a href="#" class="navLink">About</a>
 				</div>
 			</nav>
@@ -29,7 +29,7 @@
 			<!-- Title -->
 
 			<h1 class="portfolioTitle">UI/UX Design</h1>
-			<p class="work-description">I love solving design problems and creating beautiful screens.</p>
+			<p class="work-description">I love solving design problems and creating beautiful prototypes.</p>
 
 			<!-- Work -->
 
