--- a/clearspider.html
+++ b/clearspider.html
@@ -20,7 +20,7 @@
 				<div class="navRight">
 				<a href="uiuxwork.html" class="navLink">UI/UX</a>
 				<a href="graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="#" class="navLink">Photography</a>
+				<a href="Photography.html" class="navLink">Photography</a>
 				<a href="#" class="navLink">About</a>
 				</div>
 			</nav>
