--- a/rbcpathway.html
+++ b/rbcpathway.html
@@ -183,6 +183,9 @@
 
 					<p class="project-desc">Because of the time we had left before our internships ended, we only had a limited time to design our screens and flows. Ideally more sketching and brainstorming should've been put into this phase of our project. We wanted to keep our screens simple, minimal, and clean. We used the RBC Visual Design guidelines to help us create a colour palette and as well as following the icons and CTAs RBC used.</p>
 
+					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/whiteboard.jpg"></div>
+					<p class="caption">Whiteboard sketches of our prototype.</p>
+
 					<p class="project-desc">During the ideation session, we struggled with thinking how to solve the third insight: "Sharing is not a proactive part of the design process. Researchers primarily share when there is a request from another individual or team." We didn't want to make another another database of documents as we have already saw that it did not work at RBC (there was a database of research on RBC called Thinkr which no one uses or has heard of). My UX Design Professor taught us that users are lazy so we tried to figure out ways to assist designers and researchers with making the process of sharing much more easier and seamless. Our solution to this problem was creating a "project tree" to help users easily document the research process and sharing that process with other researchers and stakeholders across the bank.</p>
 
 					<div class="projectMock"><img class="projectMockWhite" src="images/RBC_Pathway/projecttree.jpg"></div>
@@ -220,8 +223,42 @@
 				<div class="overview">
 					<h3 class="project-title">Site Map &amp; User Flows</h3>
 
-					<p class="project-desc">Because of the time we had left before our internships ended, we only had a limited time to design our screens and flows. Ideally more sketching and brainstorming should've been put into this phase of our project. We wanted to keep our screens simple, minimal, and clean. We used the RBC Visual Design guidelines to help us create a colour palette and as well as following the icons and CTAs RBC used.</p>
+					<p class="project-desc">As mentioned before, the landing page for Pathway is the "My Projects" page. We decided this because since this is a new product, there would be no projects made yet. We also thought that there is more of a need for assisting users in documenting their design and research process before sharing their own work. On the main navigation, you can navigate between "My Projects, "My Team", "Find Projects", and "Resources". Project trees on your team is also on your own projects pages as well. On the project tree, you can also navigate to the resources page as mentioned before. Sharing your project will go into the Pathway database where users can find your projects through searching or suggestions based on the user's preferences.</p>
 
+					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/sitemap.png"></div>
+					<p class="caption">Site map of RBC Pathway</p>
+
+					<h3 class="proj-subtitle">Create Project Tree User Flow</h3>
+
+					<p class="project-desc">When creating a new project tree, you can select either a template or creating a new tree from scratch. After selecting your template or creating a new tree, you must edit or add your project details and add collaborators.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/newprojectflow.png"></div>
+					<p class="caption"></p>
+
+					<h3 class="proj-subtitle">Add Stages &amp; Methods User Flow</h3>
+
+					<p class="project-desc">To create a new step, the user can click on the "Add new step" button. Afterwards, you can select either a method or stage (method cannot be selected unless there is a stage present), add the description and images, and set the privacy the setting of the step.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/newstepflow.png"></div>
+					<p class="caption"></p>
+
+				</div>
+
+				<!-- User Testing & Developement -->
+
+				<div class="overview">
+					<h3 class="project-title">User Testing &amp; Development</h3>
+
+					<p class="project-desc">After completing the mockups, we prototyped Pathway on InVision and did some user testing. As we were in our final week of our internship, we were concurrently developing Pathway and did some user testing at the same time. Dan led the development while Emily and I assisted as we wanted to get our hands dirty with front-end development. We used ReactJS to develop Pathway and I helped create some modals and the Resources page. On the other end, Emily led user testing and we did what we could in the time we had left. We generally received positive feedback and incorporated the feedback into our prototype. In the end, we developed an almost functional Pathway and handed off our project to our team.</p>
+				
+				<!-- Conclusion -->
+
+				<div class="overview">
+					<h3 class="project-title">Conclusion</h3>
+
+					<p class="project-desc">There were a lot of limitations in our project as we had no budget and a small amount of time to create a proof of concept. With no budget, we were only able to interview colleagues in our team and employees that our managers referred us to which could lead to some bias as the sample size is much smaller and the fact that most people we interviewed had similar problems and views (if we could expand our reach to employees in other lines of businesses or teams we could've possibly uncovered more problems or information. With the time we had, we decided to spend the bulk of our time doing researching and sythesizing it as we believed that the research phase is the most important of the project and if we didn't get that right, our solution would not be welll received.</p>
+
+					<p class="project-desc">I learned a lot while working on this project and there are many areas we could improve on in the future. I learned many new research methods and improved my development and design skills as well. I also learned the value of research itself as this was my first project involving research. In the beginning before conducting research, I was naive to think that the solution to this problem was creating a database but after uncovering more problems and information, and ideating the solution, I realized that I shouldn't jump to conclusions and instead, focus on staying in the problem space longer than the solution space. I hope that the development of this project continues at RBC and hopefully see the final product that my colleagues and I worked hard on.</p>
 
 				</div>
 
@@ -229,5 +266,4 @@
 
 		</div>
 	</body>
-	<script src="js/main.js"></script>
 </html>
