--- a/rbcpathway.html
+++ b/rbcpathway.html
@@ -68,8 +68,6 @@
 
 					<p class="project-desc">We did our research through informally asking employees about their current toolset and how they felt about it and as well as doing some secondary research online.</p>
 
-					<!-- Remember to show evidence of the sheet -->
-
 
 					<p class="project-desc">While doing our pre-discovery research, we also found that there were other problems as well. We found that that there was a disconnect for every team with how they store documents and assets, and as well as sharing them with other employees. Once we felt that we did enough pre-discovery research we moved into problem framing to give us a starting point for our research.</p>
 				</div>
@@ -249,7 +247,11 @@
 				<div class="overview">
 					<h3 class="project-title">User Testing &amp; Development</h3>
 
-					<p class="project-desc">After completing the mockups, we prototyped Pathway on InVision and did some user testing. As we were in our final week of our internship, we were concurrently developing Pathway and did some user testing at the same time. Dan led the development while Emily and I assisted as we wanted to get our hands dirty with front-end development. We used ReactJS to develop Pathway and I helped create some modals and the Resources page. On the other end, Emily led user testing and we did what we could in the time we had left. We generally received positive feedback and incorporated the feedback into our prototype. In the end, we developed an almost functional Pathway and handed off our project to our team.</p>
+					<p class="project-desc">After completing the mockups, we prototyped Pathway on InVision and did some user testing. As we were in our final week of our internship, we were concurrently developing Pathway and did some user testing at the same time. Dan led the development while Emily and I assisted as we wanted to get our hands dirty with front-end development. We used ReactJS to develop Pathway and I helped create some simple pages such as the modals and the Resources page. On the other end, Emily led user testing and we did what we could in the time we had left. We generally received positive feedback and incorporated the feedback into our prototype. In the end, we developed an almost functional Pathway and handed off our project to our team.</p>
+
+					<p class="project-desc"><a class="person" href=http://pathwaydraft.mybluemix.net target=_blank/>You can view our live prototype here.</a></p>
+
+				</div>
 				
 				<!-- Conclusion -->
 
