--- a/clearspider.html
+++ b/clearspider.html
@@ -51,7 +51,7 @@
 				<!-- Background -->
 
 				<div class="overview">
-					<p class="project-desc">Every year at Hack the North, we have a tradition of creating a fake hackathon as an April Fool's joke. We also use this joke to promote Hack the North and as well as to help us prepare for what's to come when we plan for the actual hackathon in the summer. We go all out and this includes creating the content, creating social media accounts and posts, copywriting, designing the website, and implementing it. It took us a while to figure out our joke for April fools but in the end, we thought it would be really funny if we had a medieval hackathon. It would've been held at Casa Loma, a castle in Toronto, and there would be workshops called "Pit of Pythons" and "The Quest for Ruby".</p>
+					<p class="project-desc">University of Waterloo Marketing Association and Nspire Waterloo collaborated with Clear Spider to host a UI/UX Case Competition. Clear Spider is a cloud-based inventory management system with clients such as Coca Cola, Amazon, eBay, and Shopify.</p>
 				</div>
 
 			</div>
