--- a/clearspider.html
+++ b/clearspider.html
@@ -51,7 +51,18 @@
 				<!-- Background -->
 
 				<div class="overview">
-					<p class="project-desc">University of Waterloo Marketing Association and Nspire Waterloo collaborated with Clear Spider to host a UI/UX Case Competition. Clear Spider is a cloud-based inventory management system with clients such as Coca Cola, Amazon, eBay, and Shopify.</p>
+
+					<p class="project-desc">During February 2017, the University of Waterloo Marketing Association and Nspire Waterloo collaborated with Clear Spider to host a UI/UX Case Competition. Clear Spider is a cloud-based inventory management system with clients such as Coca Cola, Amazon, eBay, and Shopify. </p>
+
+					<p class="project-desc">Clear Spider was built in mid 2000s and since then, the system has been continually updated with new features and functionality as clients demanded more. Because of the many new functions and features, the system became bloated, difficult to use, cluttered, and disorganized.</p>
+
+					<p class="project-desc">Clear Spider wanted us to focus on three areas of functionality:</p>
+					<ul>
+						<li>Asset Tracking: Items needed to be tracked with data such as barcode, location, and category. Items also need to be searchable and filterable.</li>
+						<li>Order Management: Orders go through multiple stages from start to finish. Users need to be able to create orders and each needs to include data so the item can be tracked.</li>
+						<li>Inventory Optimization: Auto replenishment feature to determine when and how much to place an order for new items.</li>
+					</ul>
+
 				</div>
 
 			</div>
