--- a/uiuxwork.html
+++ b/uiuxwork.html
@@ -36,7 +36,7 @@
 			<!-- RBC Pathway -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a class="projectPic" href="rbcpathway.html"><img src="Images/RBCPathway_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a class="projectPic" href="rbcpathway.html"><img src="images/RBCPathway_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">RBC Pathway</h3>
 					<h4 class="projectDate">Summer 2017</h4>
@@ -48,7 +48,7 @@
 			<!-- Hack the North Mobile App -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a href="HTNmobile_app.html" class="projectPic"><img src="Images/HTNMobile_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a href="HTNmobile_app.html" class="projectPic"><img src="images/HTNMobile_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">Hack the North 2017 Mobile App Redesign</h3>
 					<h4 class="projectDate">Summer 2017</h4>
@@ -60,7 +60,7 @@
 			<!-- Hack the Throne -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a class="projectPic" href="hackthethrone.html"><img src="Images/HTT_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a class="projectPic" href="hackthethrone.html"><img src="images/HTT_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">Hack the Throne Web Design</h3>
 					<h4 class="projectDate">April 2017</h4>
@@ -72,7 +72,7 @@
 			<!-- Clear Spider Redesign -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a href="clearspider.html" class="projectPic"><img src="Images/Clearspider_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a href="clearspider.html" class="projectPic"><img src="images/Clearspider_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">Clear Spider UI/UX Redesign</h3>
 					<h4 class="projectDate">February 2017</h4>
