--- a/rbcpathway.html
+++ b/rbcpathway.html
@@ -51,7 +51,7 @@
 				<!-- Background -->
 
 				<div class="overview">
-					<p class="project-desc">During my internship at the Royal Bank of Canada, I was given the opportunity to lead a project from start to finish with other fellow co-op students, <a href="https://www.linkedin.com/in/danielkim5/" class="person" target="_blank">Daniel Kim</a> and <a href="https://www.linkedin.com/in/emilymacgowan/" class="person" target="_blank">Emily MacGowan</a>. The problem that we were given by our managers is that at RBC, many employees do not share their research findings and we wanted to figure out why that is happening and how we can solve that problem.</p>
+					<p class="project-desc">During my internship at the RBC Royal Bank, I was given the opportunity to lead a project from start to finish with other fellow co-op students, <a href="https://www.linkedin.com/in/danielkim5/" class="person" target="_blank">Daniel Kim</a> and <a href="https://www.linkedin.com/in/emilymacgowan/" class="person" target="_blank">Emily MacGowan</a>. The problem that we were given by our managers is that at RBC, many employees do not share their research findings and we wanted to figure out why that is happening and how we can solve that problem.</p>
 				</div>
 
 				<!-- Pre-Discovery -->
