--- a/uiuxwork.html
+++ b/uiuxwork.html
@@ -40,7 +40,7 @@
 				<div class="projectDesc">
 					<h2 class="projectTitle">RBC Pathway</h3>
 					<h4 class="projectDate">Summer 2017</h4>
-					<p class="projectMeta">During my internship at RBC Royal Bank, I designed a new tool for UX designers and researchers along with other fellow co-op students. We were given the opportunity to lead and work on the project from start to finish, including problem framing to a bit of development.</p>
+					<p class="projectMeta">During my internship at RBC Royal Bank, I designed a new tool for UX designers and researchers for documenting and sharing their research and design process.</p>
 					<a class="viewWork" href="rbcpathway.html">View Case Study</a>
 				</div>
 			</div>
