--- a/HTNmobile_app.html
+++ b/HTNmobile_app.html
@@ -26,7 +26,7 @@
 			</nav>
 
 			<h1 class="projectTitle">Hack the North 2017 Mobile App</h1>
-			<h3 class="projectSubtitle">Redesiging the mobile app for the largest hackathon in Canada</h3>
+			<h3 class="projectSubtitle">Redesigning the mobile app for the largest hackathon in Canada</h3>
 			
 			<div class="metaDesc">
 				<div class="metaLeft">
