--- a/HTNmobile_app.html
+++ b/HTNmobile_app.html
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 
-			<div class="projectMock"><img class="projectMock" src="images/HTNMobile_Mockup.jpg"></div>
+			<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/HTNMobile_Mockup.jpg"></div>
 
 			<div class="portfolioDesc">
 
