--- a/rbcpathway.html
+++ b/rbcpathway.html
@@ -38,13 +38,13 @@
 
 				<div class="metaRight">
 					<p class="infoA">Company</p>
-					<p class="infoB"><a href="http://www.rbcroyalbank.com/personal.html" class="person" target="_blank">Royal Bank of Canada</a></p>
+					<p class="infoB"><a href="http://www.rbcroyalbank.com/personal.html" class="person" target="_blank">RBC Royal Bank</a></p>
 					<p class="infoA">Date</p>
 					<p class="infoB">Summer 2017</p>
 				</div>
 			</div>
 
-			<div class="projectMock"><img class="projectMock" src="images/RBCPathway_Mockup.jpg"></div>
+			<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/RBCPathway_Mockup.jpg"></div>
 
 			<div class="portfolioDesc">
 
