--- a/clearspider.html
+++ b/clearspider.html
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 
-			<div class="projectMock"><img class="projectMock" src="images/Clearspider_Mockup.jpg"></div>
+			<div class="projectMock"><img class="projectMock" src="images/clearspider/Clearspider_Mockup.jpg"></div>
 
 			<div class="portfolioDesc">
 
@@ -52,9 +52,9 @@
 
 				<div class="overview">
 
-					<p class="project-desc">During February 2017, the University of Waterloo Marketing Association and Nspire Waterloo collaborated with Clear Spider to host a UI/UX Case Competition. Clear Spider is a cloud-based inventory management system with clients such as Coca Cola, Amazon, eBay, and Shopify. </p>
+					<p class="project-desc">During February 2017, the University of Waterloo Marketing Association and Nspire Waterloo collaborated with Clear Spider to host a UI/UX Case Competition. Clear Spider is a cloud-based inventory management system with clients such as Coca Cola, Amazon, eBay, and Shopify. I worked with three other designers on this case competition. We ended up taking 2nd place with our redesigned system.</p>
 
-					<p class="project-desc">Clear Spider was built in mid 2000s and since then, the system has been continually updated with new features and functionality as clients demanded more. Because of the many new functions and features, the system became bloated, difficult to use, cluttered, and disorganized.</p>
+					<p class="project-desc">Clear Spider was built in mid 2000s and since then, the system has been continually updated with new features and functionality as clients demanded more. Because of the many new functions and features, the system became difficult to use due to disorganization and oversaturation of functionality.</p>
 
 					<p class="project-desc">Clear Spider wanted us to focus on three areas of functionality:</p>
 					<ul>
@@ -62,6 +62,127 @@
 						<li>Order Management: Orders go through multiple stages from start to finish. Users need to be able to create orders and each needs to include data so the item can be tracked.</li>
 						<li>Inventory Optimization: Auto replenishment feature to determine when and how much to place an order for new items.</li>
 					</ul>
+
+				</div>
+
+				<!-- Research -->
+
+				<div class="overview">
+					<h3 class="project-title">User Research</h3>
+
+					<p class="project-desc">Since this case competition was only 2 days, there was no time for us to do some research. Instead, Clear Spider provided us with three primary personas. Along with the information Clear Spider provided us, our team also made proto-personas and user stories based on educated guesses and what we already know. </p>
+
+					<h3 class="proj-subtitle">Hands-on Staff</h3>
+					<p class="project-desc">This type of user is someone who physically touches the inventory items. Sample job titles include Warehouse Packer/Picker/Shipper. The hands-on staff needs to find out what work needs to be done (e.g. shipping, packing), change the status of orders and report to their manager. To make their lives easier, they want to quickly find items and their locations to fulfil orders.</p>
+
+					<p class="project-desc">Pain points:</p>
+					<ul>
+						<li>Cluttered interface that slowed down workflow</li>
+						<li>Constantly reporting changes to facility manager</li>
+					</ul>
+
+					<h3 class="proj-subtitle">Facility Manager</h3>
+					<p class="project-desc">This user is someone who needs to keep track of inbound and outbound orders and as well as to account for everything in their facility. They also need to make sure they have enough and not too much of anything. Sample job titles include Warehouse Manager, Supply Chain Manager and Director of Facilities. The facility manager wants to find out what orders need to be made based on stock levels, distribute tasks among employees, and add new items to the database.</p>
+
+					<p class="project-desc">Pain points:</p>
+					<ul>
+						<li>Can’t quickly see/find items that need restocking due to lack of filtering/searching and oversaturation of features</li>
+						<li>Wasting time manually repeating the same orders</li>
+					</ul>
+
+					<h3 class="proj-subtitle">Executive Level/Office Administrator</h3>
+					<p class="project-desc">This type of user is someone who looks at operations at a business or strategic level. Sample job titles include VP's and Directors. Because of time constraints, our team did not focus much on this user as we believed this the other two personas were more important.</p>
+
+				</div>
+
+
+				<!-- Wireframes -->
+
+				<div class="overview">
+					<h3 class="project-title">Wireframes</h3>
+
+					<p class="project-desc">We started this case competition by brainstorming and creating proto-personas, user tasks, and stories. There were also optionals/bonus that we could include in our redesign such as designing an omni-search and data exports/imports.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/clearspider/whiteboard1.png"></div>
+					<p class="caption">Planning out the user flows and tasks</p>
+
+					<p class="project-desc">We spent the bulk of our time brainstorming the features we were going to include in the redesign. We had the most difficulty with inventory optimization.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/clearspider/whiteboard2.jpg"></div>
+					<p class="caption">Brainstorming the redesign of Clear Spider functions</p>
+
+					<p class="project-desc">Some low-fi wireframes we drew on the whiteboard. We were planning how to lay out the database and as well as creating a filtering system.</p>
+
+					<div class="image2">
+						<img class="side" src="images/clearspider/whiteboard3.jpg">
+						<img class="side" src="images/clearspider/whiteboard4.jpg">
+					</div>
+					<p class="caption">Low-fi wireframes on whiteboard</p>
+
+				</div>
+
+				<!-- User Flow & Site Map -->
+
+				<div class="overview">
+					<h3 class="project-title">Site Map &amp; User Flows</h3>
+
+					<p class="project-desc">Because of the limited time we had for the case competition we were not able to redesign the entire system. We created a site map for the features we created.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/clearspider/sitemap.png"></div>
+					<p class="caption">Redesigned site map</p>
+
+					<h3 class="proj-subtitle">Create Order Flow</h3>
+
+					<p class="project-desc">One of the key uses as a manager or hands-on staff would be to create a new order. They would first select the whether the order was coming in or going out, then they would choose a process type, which includes replenishment, fulfillment, or vendor return. Then they would select the date they wish to receive the order by if it was inbound, or date to ship by if it was outbound.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/clearspider/createorderflow.png"></div>
+
+					<h3 class="proj-subtitle">Filter Flow</h3>
+
+					<p class="project-desc">To satisfy the need of finding an item quick and having a better workflow, we designed a filter where the user can find items by location or category. Because there are so many facets and filters, we decided to keep this page seperate.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/clearspider/filterflow.png"></div>
+
+				</div>
+
+				<!-- Final Design -->
+
+				<div class="overview">
+					<h3 class="project-title">Final Design &amp; Prototype</h3>
+
+					<p class="project-desc">Even though we decided that executive level users were not as important as the other two users, we still wanted to include their needs in our redesign. We decided to design a dashboard so that the facility manager and executive level users are able to view insights and data so that they can make well-informed decisions for the business.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/clearspider/dashboard.png"></div>
+					<p class="caption">Dashboard for the redesigned system</p>
+
+					<p class="project-desc">To satisfy the need to track and manage orders, we designed a process bar for the shipment status of items. This screen specifies what type of order this is, the source, quantity, item, and destination.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/clearspider/schedule.png"></div>
+					<p class="caption">Dashboard for the redesigned system</p>
+
+					<p class="project-desc">As there are a large number of different orders and items in a warehouse or business, it would be very difficult to search and filter for a specific item the user is looking for. We designed an easy to use filter and search system so they can search by category, type of product, and location.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/clearspider/filter.png"></div>
+					<p class="caption">Filter and search system</p>
+
+					<p class="project-desc">The redesign of the inventory system is now easier to read by removing some visual elements, features, and as well as using a new font and layout. To sastify the need of restocking inventory at the right time, we added a low alert on inventory in the table. If an item reaches below the low alert number, the item will be highlighted in red to notify the user.</p>
+
+					<div class="projectMock"><img class="projectMock" src="images/clearspider/inventory.png"></div>
+					<p class="caption">New inventory layout</p>
+
+
+					<h3 class="proj-subtitle">Prototype</h3>
+
+					<p class="project-desc">After completing the screens for this project, we prototyped our redesign on InVision and later pitched our solution to the judges.<a class="person" href=https://projects.invisionapp.com/share/MVAK1S576#/screens/220146969 target=_blank/>You can view our prototype here.</a></p>
+
+				</div>
+
+				<!-- Conclusion -->
+
+				<div class="overview">
+					<h3 class="project-title">Conclusion</h3>
+
+					<p class="project-desc">The Clear Spider redesign was my first UI/UX project I helped designed which has allowed me to experience methods used in the UX process. This project was a month after my User Experience Design class which was great to apply what I've learned in my class. Designing corporate software and redesigning a oversatured and bloated system has allowed me to improve a lot in this field as this was a difficult challenge to tackle.</p>
 
 				</div>
 
