--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -29,27 +29,48 @@
 			<!-- Title -->
 
 			<h1 class="portfolioTitle">Graphic Design &amp; Illustration</h1>
-			<p class="work-description">In my spare time, I love making digital art and creating posters. Originally I started doing Graphic Design first earlier in high school.</p>
+			<p class="work-description">In my spare time, I love making digital art and creating posters. Illustrations and branding is my specialty.</p>
 
 			<div class="imageContainerMW">
-				<a class="projectPicContainer" href="rbcpathway.html"><img class="fullwidth" src="images/graphic_design/samurai.jpg"></a>
+				<a class="projectPicContainer" href="#"><img class="fullwidth" src="images/graphic_design/samuraihome.jpg"></a>
 			</div>
 
-			<div class="threecolumn">
-				<div class="GDbox">
-					<img class="box" src="images/graphic_design/hawkeye.jpg">
-					<h3 class="work-title">Hawkeye Studios</h3>
-					<h4 class="projectType">Illustration, Graphic Design, Branding</h4>
+			<div class="grid">
+				<div class="twocolumn">
+					<div class="GDbox">
+						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/hawkeyebox.jpg"></a></div>
+						<h3 class="work-title">Hawkeye Studios</h3>
+						<h4 class="projectType">Illustration, Graphic Design, Branding, Motion Graphics</h4>
+					</div>
+					<div class="GDbox">
+						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/yrpc.jpg"></a></div>
+						<h3 class="work-title">York Region Presidents' Council Logo</h3>
+						<h4 class="projectType">Graphic Design</h4>
+					</div>
 				</div>
-				<div class="GDbox">
-					<img class="box" src="images/graphic_design/wcmoving.jpg">
-					<h3 class="work-title">Winged Canvas is Moving</h3>
-					<h4 class="projectType">Illustration, Graphic Design</h4>
+				<div class="twocolumn">
+					<div class="GDbox">
+						<div class="box"><img class="disabledBox" src="images/graphic_design/bomberbox.jpg"></div>
+						<h3 class="work-title">The Bombshelter Pub Logo Redesign</h3>
+						<h4 class="projectType">WIP - Coming soon</h4>
+					</div>
+					<div class="GDbox">
+						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/wcmovingbox.jpg"></a></div>
+						<h3 class="work-title">Winged Canvas Moving</h3>
+						<h4 class="projectType">Illustration, Graphic Design</h4>
+					</div>
 				</div>
-				<div class="GDbox">
-					<img class="box" src="images/graphic_design/arthub.jpg">
-					<h3 class="work-title">Art Hub</h3>
-					<h4 class="projectType">Graphic Design, Branding</h4>
+				<div class="twocolumn">
+					<div class="GDbox">
+						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/arthubbox.jpg"></a></div>
+						<h3 class="work-title">Art Hub</h3>
+						<h4 class="projectType">Graphic Design, Branding</h4>
+					</div>
+					<div class="GDbox">
+						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/networkbox.jpg"></a></div>
+						<h3 class="work-title">The Network</h3>
+						<h4 class="projectType">Editorial Design, Graphic Design</h4>
+					</div>
 				</div>
 			</div>
 
