--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -50,7 +50,7 @@
 				</div>
 				<div class="twocolumn">
 					<div class="GDbox">
-						<div class="box"><img class="disabledBox" src="images/graphic_design/bomberbox.jpg"></div>
+						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/bomberbox.jpg"></a></div>
 						<h3 class="work-title">The Bombshelter Pub Logo Redesign</h3>
 						<h4 class="projectType">WIP - Coming soon</h4>
 					</div>
