added samurai page

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 				</div>
 					
 				<div class="navRight">
-				<a href="uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="Photography.html" class="navLink">Photography</a>
-				<a href="#" class="navLink">About</a>
+				<a href="uiux/uiuxwork.html" class="navLink">UI/UX</a>
+				<a href="graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
+				<a href="photography/photography.html" class="navLink">Photography</a>
+				<a href="about.html" class="navLink">About</a>
 				</div>
 			</nav>
 
