--- a/uiux/hackthethrone.html
+++ b/uiux/hackthethrone.html
@@ -5,7 +5,7 @@
 		<title>Hack the Throne</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="../main.css">
 	</head>
 
 	<body>
@@ -14,14 +14,14 @@
 			<!-- Navigation -->
 			<nav>
 				<div class="navLeft">
-				<a href="index.html" class="navName">Jeffery Li</a>
+				<a href="../index.html" class="navName">Jeffery Li</a>
 				</div>
 					
 				<div class="navRight">
-				<a href="uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="#" class="navLink">Photography</a>
-				<a href="#" class="navLink">About</a>
+				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
+				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
+				<a href="../photography/photography.html" class="navLink">Photography</a>
+				<a href="../about.html" class="navLink">About</a>
 				</div>
 			</nav>
 
@@ -56,7 +56,7 @@
 					<p class="project-desc">For this project, I was in charge of creating graphics, branding, and the design of the website itself. My main inspiration for this design was old school MMORPGs (e.g. Runescape) and fantasy digital art. This was my first time creating designs for a website and I learned a lot from responsive design to assisting developer hand-off. <a href="https://hackthethrone.com" class="person" target="_blank">Check out the implemented website here!</a></p>
 				</div>
 
-				<div class="projectMock"><img class="projectMock" src="images/HTT/hackthethrone.png"></div>
+				<div class="projectMock"><img class="projectMock" src="../images/HTT/hackthethrone.png"></div>
 				<p class="caption">Mockup of the final design.</p>
 
 			</div>
