--- a/uiux/uiuxwork.html
+++ b/uiux/uiuxwork.html
@@ -5,7 +5,7 @@
 		<title>UI/UX Design</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="../main.css">
 	</head>
 
 	<body>
@@ -15,17 +15,16 @@
 			
 			<nav>
 				<div class="navLeft">
-				<a href="index.html" class="navName">Jeffery Li</a>
+				<a href="../index.html" class="navName">Jeffery Li</a>
 				</div>
 					
 				<div class="navRight">
-				<a href="uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="Photography.html" class="navLink">Photography</a>
-				<a href="#" class="navLink">About</a>
+				<a href="" class="navLink">UI/UX</a>
+				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
+				<a href="../photography/photography.html" class="navLink">Photography</a>
+				<a href="../about.html" class="navLink">About</a>
 				</div>
 			</nav>
-
 			<!-- Title -->
 
 			<h1 class="portfolioTitle">UI/UX Design</h1>
@@ -36,7 +35,7 @@
 			<!-- RBC Pathway -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a class="projectPic" href="rbcpathway.html"><img src="images/RBC_Pathway/RBCPathway_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a class="projectPic" href="rbcpathway.html"><img src="../images/RBC_Pathway/RBCPathway_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">RBC Pathway</h3>
 					<h4 class="projectDate">Summer 2017</h4>
@@ -48,7 +47,7 @@
 			<!-- Hack the North Mobile App -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a href="HTNmobile_app.html" class="projectPic"><img src="images/HTNmobileapp/HTNMobile_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a href="HTNmobile_app.html" class="projectPic"><img src="../images/HTNmobileapp/HTNMobile_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">Hack the North 2017 Mobile App Redesign</h3>
 					<h4 class="projectDate">Summer 2017</h4>
@@ -60,7 +59,7 @@
 			<!-- Hack the Throne -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a class="projectPic" href="hackthethrone.html"><img src="images/HTT/HTT_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a class="projectPic" href="hackthethrone.html"><img src="../images/HTT/HTT_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">Hack the Throne Web Design</h3>
 					<h4 class="projectDate">April 2017</h4>
@@ -72,7 +71,7 @@
 			<!-- Clear Spider Redesign -->
 
 			<div class="workSection">
-				<div class="imageLeft"><a href="clearspider.html" class="projectPic"><img src="images/clearspider/Clearspider_Mockup.jpg"></a></div>
+				<div class="imageLeft"><a href="clearspider.html" class="projectPic"><img src="../images/clearspider/Clearspider_Mockup.jpg"></a></div>
 				<div class="projectDesc">
 					<h2 class="projectTitle">Clear Spider UI/UX Redesign</h3>
 					<h4 class="projectDate">February 2017</h4>
