--- a/graphicdesign/graphicdesign.html
+++ b/graphicdesign/graphicdesign.html
@@ -5,7 +5,7 @@
 		<title>Graphic Design &amp; Illustration</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="../main.css">
 	</head>
 
 	<body>
@@ -15,57 +15,59 @@
 			
 			<nav>
 				<div class="navLeft">
-				<a href="index.html" class="navName">Jeffery Li</a>
+				<a href="../index.html" class="navName">Jeffery Li</a>
 				</div>
 					
 				<div class="navRight">
-				<a href="uiux/uiuxwork.html" class="navLink">UI/UX</a>
+				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
 				<a href="" class="navLink">Graphic Design</a>
-				<a href="photography/photography.html" class="navLink">Photography</a>
-				<a href="about.html" class="navLink">About</a>
+				<a href="../photography/photography.html" class="navLink">Photography</a>
+				<a href="../about.html" class="navLink">About</a>
 				</div>
 			</nav>
+
+			<!-- Title -->
 
 			<h1 class="portfolioTitle">Graphic Design &amp; Illustration</h1>
 			<p class="work-description">In my spare time, I love making digital art and creating posters. Illustrations and branding is my specialty.</p>
 
 			<div class="imageContainerMW">
-				<a class="projectPicContainer" href="graphicdesign/samurai.html"><img class="fullwidth" src="images/graphic_design/samuraihome.jpg"></a>
+				<a class="projectPicContainer" href="samurai.html"><img class="fullwidth" src="../images/graphic_design/samuraihome.jpg"></a>
 			</div>
 
 			<div class="grid">
 				<div class="twocolumn">
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/hawkeyebox.jpg"></a></div>
+						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/hawkeyebox.jpg"></a></div>
 						<h3 class="work-title">Hawkeye Studios</h3>
 						<h4 class="projectType">Illustration, Graphic Design, Branding, Motion Graphics</h4>
 					</div>
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/yrpc.jpg"></a></div>
+						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/yrpc.jpg"></a></div>
 						<h3 class="work-title">York Region Presidents' Council Logo</h3>
 						<h4 class="projectType">Graphic Design</h4>
 					</div>
 				</div>
 				<div class="twocolumn">
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/bomberbox.jpg"></a></div>
+						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/bomberbox.jpg"></a></div>
 						<h3 class="work-title">The Bombshelter Pub Logo Redesign</h3>
 						<h4 class="projectType">WIP - Coming soon</h4>
 					</div>
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/wcmovingbox.jpg"></a></div>
+						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/wcmovingbox.jpg"></a></div>
 						<h3 class="work-title">Winged Canvas Moving</h3>
 						<h4 class="projectType">Illustration, Graphic Design</h4>
 					</div>
 				</div>
 				<div class="twocolumn">
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/arthubbox.jpg"></a></div>
+						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/arthubbox.jpg"></a></div>
 						<h3 class="work-title">Art Hub</h3>
 						<h4 class="projectType">Graphic Design, Branding</h4>
 					</div>
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="images/graphic_design/networkbox.jpg"></a></div>
+						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/networkbox.jpg"></a></div>
 						<h3 class="work-title">The Network</h3>
 						<h4 class="projectType">Editorial Design, Graphic Design</h4>
 					</div>
