--- a/uiux/HTNmobile_app.html
+++ b/uiux/HTNmobile_app.html
@@ -5,7 +5,7 @@
 		<title>Hack the North 2017 Mobile App</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="../main.css">
 	</head>
 
 	<body>
@@ -14,14 +14,14 @@
 			<!-- Navigation -->
 			<nav>
 				<div class="navLeft">
-				<a href="index.html" class="navName">Jeffery Li</a>
+				<a href="../index.html" class="navName">Jeffery Li</a>
 				</div>
 					
 				<div class="navRight">
-				<a href="uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="Photography.html" class="navLink">Photography</a>
-				<a href="#" class="navLink">About</a>
+				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
+				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
+				<a href="../photography/photography.html" class="navLink">Photography</a>
+				<a href="../about.html" class="navLink">About</a>
 				</div>
 			</nav>
 
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 
-			<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/HTNMobile_Mockup.jpg"></div>
+			<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/HTNMobile_Mockup.jpg"></div>
 
 			<div class="portfolioDesc">
 
@@ -69,33 +69,33 @@
 
 					<p class="project-desc">The old flow for signing into the account was inefficient as you had to click on the "Sign In" button, enter your hacker email, click on "Next", enter your password, and then click on "Log In". You can log in much faster if you are able to enter your email and password on one screen and then click on one button that says "Login". I also thought that the text on the buttons were a bit too small.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2016login.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2016login.png"></div>
 					<p class="caption">2016 Sign In Flow</p>
 
 					<h3 class="proj-subtitle">Navigation</h3>
 
 					<p class="project-desc">I noticed that the navigation was inconsistent. There was both a navigation drawer and bottom navigation bar (this pattern could be used depending on the context but I didn't think that this was the right fit), and a tab navigation for only the mentorship feature of this app. I personally don't like navigation drawers as this pattern hides other features of apps. What was needed for the new app is a consistent navigation that would allow the user to easily navigate between features. The 2016 navigation did not work as the tab navigation in mentorship did not have a bottom navigation so the user is not able to jump between other features of the app in one click. </p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2016navigation.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2016navigation.png"></div>
 					<p class="caption">2016 Navigation</p>
 
 					<p class="project-desc">Moez and I had the most trouble with figuring out how to design the navigation the best way. We decided that it would be best to have a bottom navigation with four main features: Updates, Mentorship, Schedule and Sponsors. We believed that those four the most important features of the app. We also put a "more" button on the side of the navigation to access secondary features such as your profile, map and settings.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/whiteboard.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/whiteboard.png"></div>
 					<p class="caption">Navigation ideation at Moez's house. We also found out that his closet door is a whiteboard on the same day.</p>	
 
 					<h3 class="proj-subtitle">Updates</h3>
 
 					<p class="project-desc">The home page of the mobile app consisted of live updates for the event. This feature of the app is useful as it allows us to update hackers on important information such as workshop or event times or locations, schedule changes or information on meal time. I thought that some posts were too text heavy (e.g. far left screen) which would make some posts a little harder to read. I also thought that the format for some posts such as workshops were hard to read as well because they were written in a long paragraph instead of them being listed. I noticed that some posts had tags in them. I thought "what was the point of these tags?". You were not able to click on them and if you were able to, it should filter out posts based on the tag such as food updates, or workshop updates. I also thought it would be a cool feature if we were able to link locations and event times from updates to the schedule or map itself.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2016home.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2016home.png"></div>
 					<p class="caption">2016 Updates</p>
 
 					<h3 class="proj-subtitle">Mentoring</h3>
 
 					<p class="project-desc">One great feature of the app is being able to request mentorship from other hackers or sponsors. If a hacker is having problems with their hack and needs help, they are able to request for help. I thought that the flow for requesting for help was easy and simple. I would not change anything about the flow but there were a few areas in this feature that could be improved on. When you request for help, there is a field for putting in your locaiton. This is not a good idea because some hackers could be very vague about their location or they may not even be there when the mentor comes to help. There needs be a way for the hacker to communicate with the mentor when they need to find eachother. For the category section, you can only select a category from a list. The category/tag is for which language or framework the hacker needs help with and since there are a tons of languages and frameworks, the list would be very long. The user should be able to search for the language or framework.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2016mentorflow.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2016mentorflow.png"></div>
 					<p class="caption">2016 Mentor Request Flow</p>
 
 					<p class="project-desc">Based on some feedback from last year, these are the main paint points of last year's mentoring feature:</p>
@@ -110,7 +110,7 @@
 							</ul>
 					</ul>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2016mentor.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2016mentor.png"></div>
 					<p class="caption">2016 Mentor Requests Screen</p>
 
 					<p class="project-desc">One of the biggest problems with the mentor request section is that requests are ordered from newest to oldest. Request should be ordered from oldest to newest as the older requests should be prioritized since the hackers have been waiting for much longer. It would also be great if mentors can filter requests by language, framework, or type of request (e.g. design, hardware, code).</p>
@@ -125,14 +125,14 @@
 
 					<p class="project-desc">Some screens were simple enough for me to go straight into making high-fi mockups but I wanted to try out different layouts for some features of the app. I wanted to change the layout of mentoring and as well as the user's profile.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/lowfi.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/lowfi.png"></div>
 					<p class="caption">Low-Fi mockups of Mentoring and Profile</p>
 
 					<h3 class="proj-subtitle">High-Fidelity Reiterations</h3>
 
 					<p class="project-desc">Based on feedback I received from the design and mobile team, I reiterated the high-fidelity mockups multiple times. Some screens did not make it to the final design such as the FAQ and Sponsors screen.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/processscreens.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/processscreens.png"></div>
 					<p class="caption">Multiple reiterations of my screens</p>
 
 				</div>
@@ -145,21 +145,21 @@
 
 					<p class="project-desc">Every year at Hack the North, we change the branding of our organization slightly such as the typefaces we use on our website. I followed the style guide and customized it as well for the mobile app. Below are the colours, typefaces, navigation, and components I used in designing the mobile app. Note: The colours, navigation and some components did not make it to the fully developed mobile app.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/components.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/components.png"></div>
 					<p class="caption">Colors, fonts, and components of the 2017 HTN Mobile App</p>
 
 					<h3 class="proj-subtitle">Login</h3>
 
 					<p class="project-desc">For the login screens, I took out the unnecessary steps required to login. I designed the login screen to be much more simple. I also added a touch of a blue gradient to the login button.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2017login.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2017login.png"></div>
 					<p class="caption">2017 HTN Mobile Login Screens</p>
 
 					<h3 class="proj-subtitle">Updates</h3>
 
 					<p class="project-desc">I added a timer where hackers can check when hacking ends. Users are able to hide and unhide the timer by clicking on the chevron on the top right of the timer. Unfortunately this feature of the app did not get implemented as we had time constraints but the front-end team was able to implement this timer on the day-of event website! I also added a filter so users can filter out updates based on what they want to see. The text is also much more readable and easier to look at by adding more white space. Another feature I designed was the blue dot beside the title of an update. The blue dot means that a new update was posted that the user did not see yet.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2017updates.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2017updates.png"></div>
 					<p class="caption">2017 HTN Mobile Updates Screens</p>
 
 					<h3 class="proj-subtitle">Profile</h3>
@@ -168,12 +168,12 @@
 
 					<p class="project-desc">I also improved the UX of editing a user's profile. In the skills section, instead of selecting your skill from a list, you are now able to search for the skill. You are also not able input your skills unless the user is a mentor.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2017profile.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2017profile.png"></div>
 					<p class="caption">2017 HTN Mobile Profile Screens (What you see)</p>
 
 					<p class="project-desc">We decided to take out the location field in the mentorship request feature. Instead, we decided to link Slack to the mobile app as we have a slack for the hackathon attendees. When you click on the message button, the button will take you to the user's profile. We also added an online status to a user's profile so the hackers are able to know who may be available right away.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2017hackerprofile.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2017hackerprofile.png"></div>
 					<p class="caption">2017 HTN Mobile Profile Screens (What others see)</p>
 
 					<h3 class="proj-subtitle">Mentoring: List, Submit &amp; Claim</h3>
@@ -181,25 +181,25 @@
 					<p class="project-desc">On the mentoring list, I added a feature where you can filter mentors based on the categories: design, code, and hardware. That way, users are able to find mentors that are relevant to them much quicker. I also added the green dot to represent if a mentor is online or not.</p>
 
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2017mentorlist.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2017mentorlist.png"></div>
 					<p class="caption">2017 HTN Mobile Mentor List Screens</p>
 
 					<p class="project-desc">On the Claim requests tab, users are also to filter out requests based on categories just like the mentor list. I also made sure that the requests are ordered from newest to oldest. Claimed is a new section where users can see requests they claimed or their own requests.</p>
 
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2017requests.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2017requests.png"></div>
 					<p class="caption">2017 HTN Mobile Mentor Request Screens</p>
 
 					<p class="project-desc">The layout of submitting a request has changed. Users are also now able to search for the skill instead of looking for it in a list. I also wanted to add a feature where you can upload a picture of your request (e.g. could be useful for hardware requests) but this feature unfortunately did not make it to the final version.</p>
 
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2017submitclaim.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2017submitclaim.png"></div>
 					<p class="caption">2017 HTN Mobile Submit Claim Screens</p>
 
 					<p class="project-desc">Other than some minor visual changes, we made sure to address the pain point where the user does not receive feedback from the system. When a mentor accepts a claim, a box will pop up with a button that would lead the mentor to Slack to message the hacker.</p>
 
 
-					<div class="projectMock"><img class="projectMock" src="images/HTNmobileapp/2017resolve.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2017resolve.png"></div>
 					<p class="caption">2017 HTN Mobile Accept &amp; Submit Claim Screens</p>
 
 				</div>
