--- a/uiux/clearspider.html
+++ b/uiux/clearspider.html
@@ -5,7 +5,7 @@
 		<title>Clear Spider UI/UX Redesign</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="../main.css">
 	</head>
 
 	<body>
@@ -14,14 +14,14 @@
 			<!-- Navigation -->
 			<nav>
 				<div class="navLeft">
-				<a href="index.html" class="navName">Jeffery Li</a>
+				<a href="../index.html" class="navName">Jeffery Li</a>
 				</div>
 					
 				<div class="navRight">
-				<a href="uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="Photography.html" class="navLink">Photography</a>
-				<a href="#" class="navLink">About</a>
+				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
+				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
+				<a href="../photography/photography.html" class="navLink">Photography</a>
+				<a href="../about.html" class="navLink">About</a>
 				</div>
 			</nav>
 
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 
-			<div class="projectMock"><img class="projectMock" src="images/clearspider/Clearspider_Mockup.jpg"></div>
+			<div class="projectMock"><img class="projectMock" src="../images/clearspider/Clearspider_Mockup.jpg"></div>
 
 			<div class="portfolioDesc">
 
@@ -103,19 +103,19 @@
 
 					<p class="project-desc">We started this case competition by brainstorming and creating proto-personas, user tasks, and stories. There were also optionals/bonus that we could include in our redesign such as designing an omni-search and data exports/imports.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/clearspider/whiteboard1.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/clearspider/whiteboard1.png"></div>
 					<p class="caption">Planning out the user flows and tasks</p>
 
 					<p class="project-desc">We spent the bulk of our time brainstorming the features we were going to include in the redesign. We had the most difficulty with inventory optimization.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/clearspider/whiteboard2.jpg"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/clearspider/whiteboard2.jpg"></div>
 					<p class="caption">Brainstorming the redesign of Clear Spider functions</p>
 
 					<p class="project-desc">Some low-fi wireframes we drew on the whiteboard. We were planning how to lay out the database and as well as creating a filtering system.</p>
 
 					<div class="image2">
-						<img class="side" src="images/clearspider/whiteboard3.jpg">
-						<img class="side" src="images/clearspider/whiteboard4.jpg">
+						<img class="side" src="../images/clearspider/whiteboard3.jpg">
+						<img class="side" src="../images/clearspider/whiteboard4.jpg">
 					</div>
 					<p class="caption">Low-fi wireframes on whiteboard</p>
 
@@ -128,20 +128,20 @@
 
 					<p class="project-desc">Because of the limited time we had for the case competition we were not able to redesign the entire system. We created a site map for the features we created.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/clearspider/sitemap.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/clearspider/sitemap.png"></div>
 					<p class="caption">Redesigned site map</p>
 
 					<h3 class="proj-subtitle">Create Order Flow</h3>
 
 					<p class="project-desc">One of the key uses as a manager or hands-on staff would be to create a new order. They would first select the whether the order was coming in or going out, then they would choose a process type, which includes replenishment, fulfillment, or vendor return. Then they would select the date they wish to receive the order by if it was inbound, or date to ship by if it was outbound.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/clearspider/createorderflow.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/clearspider/createorderflow.png"></div>
 
 					<h3 class="proj-subtitle">Filter Flow</h3>
 
 					<p class="project-desc">To satisfy the need of finding an item quick and having a better workflow, we designed a filter where the user can find items by location or category. Because there are so many facets and filters, we decided to keep this page seperate.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/clearspider/filterflow.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/clearspider/filterflow.png"></div>
 
 				</div>
 
@@ -152,22 +152,22 @@
 
 					<p class="project-desc">Even though we decided that executive level users were not as important as the other two users, we still wanted to include their needs in our redesign. We decided to design a dashboard so that the facility manager and executive level users are able to view insights and data so that they can make well-informed decisions for the business.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/clearspider/dashboard.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/clearspider/dashboard.png"></div>
 					<p class="caption">Dashboard for the redesigned system</p>
 
 					<p class="project-desc">To satisfy the need to track and manage orders, we designed a process bar for the shipment status of items. This screen specifies what type of order this is, the source, quantity, item, and destination.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/clearspider/schedule.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/clearspider/schedule.png"></div>
 					<p class="caption">Dashboard for the redesigned system</p>
 
 					<p class="project-desc">As there are a large number of different orders and items in a warehouse or business, it would be very difficult to search and filter for a specific item the user is looking for. We designed an easy to use filter and search system so they can search by category, type of product, and location.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/clearspider/filter.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/clearspider/filter.png"></div>
 					<p class="caption">Filter and search system</p>
 
 					<p class="project-desc">The redesign of the inventory system is now easier to read by removing some visual elements, features, and as well as using a new font and layout. To sastify the need of restocking inventory at the right time, we added a low alert on inventory in the table. If an item reaches below the low alert number, the item will be highlighted in red to notify the user.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/clearspider/inventory.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/clearspider/inventory.png"></div>
 					<p class="caption">New inventory layout</p>
 
 
