--- a/uiux/rbcpathway.html
+++ b/uiux/rbcpathway.html
@@ -5,7 +5,7 @@
 		<title>RBC Pathway</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="../main.css">
 	</head>
 
 	<body>
@@ -14,14 +14,14 @@
 			<!-- Navigation -->
 			<nav>
 				<div class="navLeft">
-				<a href="index.html" class="navName">Jeffery Li</a>
+				<a href="../index.html" class="navName">Jeffery Li</a>
 				</div>
 					
 				<div class="navRight">
-				<a href="uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="Photography.html" class="navLink">Photography</a>
-				<a href="#" class="navLink">About</a>
+				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
+				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
+				<a href="../photography/photography.html" class="navLink">Photography</a>
+				<a href="../about.html" class="navLink">About</a>
 				</div>
 			</nav>
 
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 
-			<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/RBCPathway_Mockup.jpg"></div>
+			<div class="projectMock"><img class="projectMock" src="../images/RBC_Pathway/RBCPathway_Mockup.jpg"></div>
 
 			<div class="portfolioDesc">
 
@@ -82,7 +82,7 @@
 
 					<p class="project-desc">The participants were asked to write down some of the challenges they face in their day-to-day lives at work on sticky notes. Afterwards Dan, Emily, and I clustered the stickies into common themes and the participants were given three sticky dots to vote for which challenges were most important to solve for.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/pathway1.jpeg"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/RBC_Pathway/pathway1.jpeg"></div>
 					<p class="caption">The resulting groupings/themes from the problem framing session include: context, redundancy in work, awareness, efficiency, challenging your research, finding research, organization, sharing/cultural, technical, quality/reliability.</p>
 
 
@@ -119,13 +119,13 @@
 					
 					<p class="project-desc">After conducting interviews, we wanted to dig deeper based on the information we discovered through the interviews. We wanted to understand how users shared information across enterprises, barriers to knowledge sharing, and extrinsic/intrinsic motivations on why people share. We looked through research papers, case studies, articles, and wrote down interesting findings on sticky notes and added them to our synthesis wall.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/pathway2.jpeg"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/RBC_Pathway/pathway2.jpeg"></div>
 					<p class="caption">As RBC did not have a dedicated workspace for researchers and designers, we went on multiple floors and rooms to do our affinity diagramming (this took us a while as we had to take them down and put them back up).</p>
 
 					<h3 class="proj-subtitle">Research Findings</h3>
 					<p class="project-desc">Our primary and secondary research was summarized and clustered into themes using a research method technique known as affinity diagramming. This technique helped us organize our data points into meaningful and manageable themes.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/pathway3.jpeg"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/RBC_Pathway/pathway3.jpeg"></div>
 					<p class="caption">We ended up stealing a touch-down room and stayed in there for five days until we were kicked out.</p>
 
 					<p class="project-desc">Here are some sample insights that we crafted from the data we synthesized:</p>
@@ -155,7 +155,7 @@
 
 					<p class="project-desc">A primary evidence-based persona was developed using the research we conducted as a team. In this persona we outlined user goals, behaviours, current pains, values, tools used and their needs and desires with respect to finding, sharing, using and documenting research. This is a draft of our persona and will be continuously developed with further research in the future when the project is handed over to next team that will work on this project. </p>
 
-					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/pathway4.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/RBC_Pathway/pathway4.png"></div>
 
 				</div>
 
@@ -167,8 +167,8 @@
 					<p class="project-desc">Due to time and budget constraints, we were not able to hold an ideation workshop with participants. Instead we hosted an ideation session with just Emily, Dan and I. We started the ideation session by generating ideas solo. We took some time to generate some ideas and generate some low-fi mockups. Later, we shared our ideas with eachother, gave feedback, and listed pros and cons of each proposed solution. Afterwards we took the best ideas and pulled them into the final solution. While thinking about the solution, we made sure to reference insight statements, the persona, research themes, and the revised HMW statement.</p>
 
 					<div class="image2">
-						<img class="side" src="images/RBC_Pathway/pathway5.jpg">
-						<img class="side" src="images/RBC_Pathway/pathway6.jpg">
+						<img class="side" src="../images/RBC_Pathway/pathway5.jpg">
+						<img class="side" src="../images/RBC_Pathway/pathway6.jpg">
 					</div>
 					<p class="caption">Some rough sketches from our ideation sesson.</p>	
 
@@ -181,37 +181,37 @@
 
 					<p class="project-desc">Because of the time we had left before our internships ended, we only had a limited time to design our screens and flows. Ideally more sketching and brainstorming should've been put into this phase of our project. We wanted to keep our screens simple, minimal, and clean. We used the RBC Visual Design guidelines to help us create a colour palette and as well as following the icons and CTAs RBC used.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/whiteboard.jpg"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/RBC_Pathway/whiteboard.jpg"></div>
 					<p class="caption">Whiteboard sketches of our prototype.</p>
 
 					<p class="project-desc">During the ideation session, we struggled with thinking how to solve the third insight: "Sharing is not a proactive part of the design process. Researchers primarily share when there is a request from another individual or team." We didn't want to make another another database of documents as we have already saw that it did not work at RBC (there was a database of research on RBC called Thinkr which no one uses or has heard of). My UX Design Professor taught us that users are lazy so we tried to figure out ways to assist designers and researchers with making the process of sharing much more easier and seamless. Our solution to this problem was creating a "project tree" to help users easily document the research process and sharing that process with other researchers and stakeholders across the bank.</p>
 
-					<div class="projectMock"><img class="projectMockWhite" src="images/RBC_Pathway/projecttree.jpg"></div>
+					<div class="projectMock"><img class="projectMockWhite" src="../images/RBC_Pathway/projecttree.jpg"></div>
 					<p class="caption">High-Fidelity Mockup of the Project Tree</p>
 
 					<p class="project-desc">In the project tree, users are able to document "Stages" and "Methods". "Stages" (the larger box filling the full width of the container) refer to a key step in the design process such as pre-discovery or research synthesis while "Methods" (box filling half the width of the container) refers to a method used during that "stage" such as problem framing in the pre-discovery phase or conducting interviews in the research phase.</p>
 
-					<div class="projectMock"><img class="projectMockWhite" src="images/RBC_Pathway/projecthelp.png"></div>
+					<div class="projectMock"><img class="projectMockWhite" src="../images/RBC_Pathway/projecthelp.png"></div>
 					<p class="caption">This box will appear when you hover over the "?" icon and will give the user info on that certain design process or method.</p>
 
 					<p class="project-desc">We also wanted to further the design field at RBC (which at the time we were there, was underdeveloped). Very few teams at RBC were educated about user research and design thinking so we wanted to help employees learn more about these processes so that they can create better products and make better decisions. On this web app, we created a resources page where users can find suggested books, how-to's, and guides on research methods and processes. On the project tree, on both methods and stages, users are able to hover over the "?" icon to learn more about a certain process or method. When creating a new method or stage on a project tree, we have preset stages and methods that would link back to resources page.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/projectstep.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/RBC_Pathway/projectstep.png"></div>
 					<p class="caption">When typing in a process or method, we give preset suggestions to the user.</p>
 
 					<p class="project-desc">The great thing about this feature is that we were able to educate users on design processes and methods if they didn't know how to create a research plan for their project. We also had different preset templates for the users if they had no knowledge on research to guide them in the right direction. Users were also able to create their own templates or duplicate trees so that they can document their research much faster.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/projecttemplate.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/RBC_Pathway/projecttemplate.png"></div>
 					<p class="caption">Users are able to select any preset templates for their project tree.</p>
 
 					<p class="project-desc">As mentioned previously, we didn't want to make Pathway look and feel like a database or else no would want to use it. We wanted make Pathway to look more simlpe and easy to navigate so we made the "Find Projects" page filled with projects on cards. This way it would much easier for the user to find what they are looking for. On this page, your feed is filled with suggested projects based on what the user has liked and on the user's preferences (users select what they are interested in when they first sign up). As Pathway is a new product there would be no projects at all so we decided that this page would be not be the landing page until projects start filling up. </p>
 
-					<div class="projectMock"><img class="projectMockWhite" src="images/RBC_Pathway/findprojects.png"></div>
+					<div class="projectMock"><img class="projectMockWhite" src="../images/RBC_Pathway/findprojects.png"></div>
 					<p class="caption">Users can find suggested projects or search on the "Find Projects" page.</p>
 
 					<p class="project-desc">At RBC, employees are under a team that is under an area of the bank (e.g. I was under Employee Digital Experience Architecture which is under Enterprise Architecture). On Pathway, users are able to create teams with their respective colleagues and can collaborate more easily on their project trees. Users are also able to find teams and follow them as well and get updates when a team or individual has made a change to their projects or shared their work.</p>
 
-					<div class="projectMock"><img class="projectMockWhite" src="images/RBC_Pathway/projectsteam.png"></div>
+					<div class="projectMock"><img class="projectMockWhite" src="../images/RBC_Pathway/projectsteam.png"></div>
 					<p class="caption">On the team profile, you can see who's on that team and projects they've worked on.</p>
 
 				</div>
@@ -223,21 +223,21 @@
 
 					<p class="project-desc">As mentioned before, the landing page for Pathway is the "My Projects" page. We decided this because since this is a new product, there would be no projects made yet. We also thought that there is more of a need for assisting users in documenting their design and research process before sharing their own work. On the main navigation, you can navigate between "My Projects, "My Team", "Find Projects", and "Resources". Project trees on your team is also on your own projects pages as well. On the project tree, you can also navigate to the resources page as mentioned before. Sharing your project will go into the Pathway database where users can find your projects through searching or suggestions based on the user's preferences.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/sitemap.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/RBC_Pathway/sitemap.png"></div>
 					<p class="caption">Site map of RBC Pathway</p>
 
 					<h3 class="proj-subtitle">Create Project Tree User Flow</h3>
 
 					<p class="project-desc">When creating a new project tree, you can select either a template or creating a new tree from scratch. After selecting your template or creating a new tree, you must edit or add your project details and add collaborators.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/newprojectflow.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/RBC_Pathway/newprojectflow.png"></div>
 					<p class="caption"></p>
 
 					<h3 class="proj-subtitle">Add Stages &amp; Methods User Flow</h3>
 
 					<p class="project-desc">To create a new step, the user can click on the "Add new step" button. Afterwards, you can select either a method or stage (method cannot be selected unless there is a stage present), add the description and images, and set the privacy the setting of the step.</p>
 
-					<div class="projectMock"><img class="projectMock" src="images/RBC_Pathway/newstepflow.png"></div>
+					<div class="projectMock"><img class="projectMock" src="../images/RBC_Pathway/newstepflow.png"></div>
 					<p class="caption"></p>
 
 				</div>
