--- a/graphicdesign/graphicdesign.html
+++ b/graphicdesign/graphicdesign.html
@@ -38,7 +38,7 @@
 			<div class="grid">
 				<div class="twocolumn">
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/hawkeyebox.jpg"></a></div>
+						<div class="box"><a href="hawkeye.html" class="projectPicBox"><img src="../images/graphic_design/hawkeyebox.jpg"></a></div>
 						<h3 class="work-title">Hawkeye Studios</h3>
 						<h4 class="projectType">Illustration, Graphic Design, Branding, Motion Graphics</h4>
 					</div>
