completed yrpc page

--- a/graphicdesign/graphicdesign.html
+++ b/graphicdesign/graphicdesign.html
@@ -43,31 +43,31 @@
 						<h4 class="projectType">Illustration, Graphic Design, Branding, Motion Graphics</h4>
 					</div>
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/yrpc.jpg"></a></div>
+						<div class="box"><a href="yrpc.html" class="projectPicBox"><img src="../images/graphic_design/yrpc.jpg"></a></div>
 						<h3 class="work-title">York Region Presidents' Council Logo</h3>
 						<h4 class="projectType">Graphic Design</h4>
 					</div>
 				</div>
 				<div class="twocolumn">
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/bomberbox.jpg"></a></div>
-						<h3 class="work-title">The Bombshelter Pub Logo Redesign</h3>
+						<div class="box"><img class="disabledBox" src="../images/graphic_design/bomberbox.jpg"></a></div>
+						<h3 class="work-title">The Bombshelter Pub Brand Redesign</h3>
 						<h4 class="projectType">WIP - Coming soon</h4>
 					</div>
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/wcmovingbox.jpg"></a></div>
+						<div class="box"><a href="wingedcanvas.html" class="projectPicBox"><img src="../images/graphic_design/wcmovingbox.jpg"></a></div>
 						<h3 class="work-title">Winged Canvas Moving</h3>
 						<h4 class="projectType">Illustration, Graphic Design</h4>
 					</div>
 				</div>
 				<div class="twocolumn">
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/arthubbox.jpg"></a></div>
+						<div class="box"><a href="arthub.html" class="projectPicBox"><img src="../images/graphic_design/arthubbox.jpg"></a></div>
 						<h3 class="work-title">Art Hub</h3>
 						<h4 class="projectType">Graphic Design, Branding</h4>
 					</div>
 					<div class="GDbox">
-						<div class="box"><a href="#" class="projectPicBox"><img src="../images/graphic_design/networkbox.jpg"></a></div>
+						<div class="box"><a href="thenetwork.html" class="projectPicBox"><img src="../images/graphic_design/networkbox.jpg"></a></div>
 						<h3 class="work-title">The Network</h3>
 						<h4 class="projectType">Editorial Design, Graphic Design</h4>
 					</div>
