completed wc moving page

--- a/graphicdesign/hawkeye.html
+++ b/graphicdesign/hawkeye.html
@@ -55,14 +55,14 @@
 					<img class="projectMock" src="../images/graphic_design/hawkeyebrand.jpg">
 			</div>
 
-			<div class="GDpage">
+			<div class="GDpage2">
 				<a name="motiongraphics"><h3 class="GDsubtitle">Motion Graphics</h3></a>
 
 				<p class="GDprojectinfo">For the second part of our project, we had to make a short animated video for our client. I used the illustrations I made in the branding portion of the project for my motion graphics video. For this project I wanted to learn how to animate logos and as learn how to use the software as this would be my first time creating motion graphics. The dimensions for this video is a bit odd as we had to fit our video on a 3 story microtile wall. This portion of the project was made with Adobe Illustrator and Adobe After Effects.</p>
 
-				<iframe src="https://player.vimeo.com/video/198282541" width="100%" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
 			</div>
+			
+			<iframe src="https://player.vimeo.com/video/198282541" width="100%" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 		</div>
 	</body>
