--- a/graphicdesign/yrpc.html
+++ b/graphicdesign/yrpc.html
@@ -36,7 +36,7 @@
 				</div>
 			</div>
 
-			<!-- Samurai -->
+			<!-- YRPC -->
 
 			<div class="GDpage">
 				<h2 class="GDtitle">The York Region Presidents' Council Logo Update</h2>
@@ -45,7 +45,7 @@
 				<p class="GDprojectinfo">As an elected member of the YRPC, I was the Minister of Communications where I handed the social media accounts, marketing, photography, and designs of YRPC assets. When I first started in YRPC, I decided that it would be best to update our logo as the logo was very outdated (think 1990s to early 2000s style). I kept the logo as a coat of arms and made sure to include four different areas of education: arts, mathematics and the sciences, geography and social studies, and physical activities.</p>
 			</div>
 			<div class="GDinfo">
-				<p class="GDinfoA">Summer 2014</p>
+				<p class="GDinfoA">September 2014</p>
 			</div>
 			<div class="projectMock">
 					<img class="projectMock" src="../images/graphic_design/yrpclogo.jpg">
