urban photo page

--- a/photography/photography.html
+++ b/photography/photography.html
@@ -29,13 +29,14 @@
 			<!-- Title -->
 
 			<h1 class="photoTitle">Photography</h1>
-			<p class="photo-desc">If you don't see me sitting behind the computer designing, I'll be behind a camera shooting the streets of Toronto.</p>
+			<p class="photo-desc">If you don't see me sitting behind the computer designing, I'll be behind a camera shooting the streets of Toronto.</br></br>
+			Check out my <a class="person" href="https://www.instagram.com/jefferyyli/">Instagram</a> to view more photo.</p>
 
 			<!-- Photography -->
 
 			<div class="row">
 				<div class="photocontainer ">
-					<a class="photoPicContainer" href="#"><img class="fullwidth" src="../images/photography/urban.jpg"></a>
+					<a class="photoPicContainer" href="urban.html"><img class="fullwidth" src="../images/photography/urban.jpg"></a>
 					<p class="hovertext">Urban &amp; Street</p>
 					<p class="hoversubtext">A collection of photos from Toronto, New York City, and San Francisco</p>
 				</div>
