--- a/photography/urban.html
+++ b/photography/urban.html
@@ -37,7 +37,7 @@
 		<div class="photogrid">
 			<div class="photocolumn">
 				<div class="overlay">
-					<a class="photoContain" href="#"><img src="../images/photography/urban/cntower.jpg"></a>
+					<a class="photoContain" href="../photography/urban/cntower.html"><img src="../images/photography/urban/cntower.jpg"></a>
 					<!-- <p class="smalltext">CN Tower</p> -->
 				</div>
 				<a class="photoContain" href="#"><img src="../images/photography/urban/street.jpg"></a>
@@ -45,7 +45,7 @@
 				<a class="photoContain" href="#"><img src="../images/photography/urban/hwy.jpg"></a>
 			</div>
 			<div class="photocolumn">
-				<a class="photoContain" href="#"><img src="../images/photography/urban/goldengate2.jpg"></a>
+				<a class="photoContain" href="../photography/urban/goldengatefog.html"><img src="../images/photography/urban/goldengate2.jpg"></a>
 				<a class="photoContain" href="#"><img src="../images/photography/urban/nycdes.jpg"></a>
 				<a class="photoContain" href="#"><img src="../images/photography/urban/oculus2.jpg"></a>
 				<a class="photoContain" href="#"><img src="../images/photography/urban/nycroad.jpg"></a>
