--- a/photography/photography.html
+++ b/photography/photography.html
@@ -41,17 +41,17 @@
 					<p class="hoversubtext">A collection of photos from Toronto, New York City, and San Francisco</p>
 				</div>
 				<div class="photocontainer ">
-					<a class="photoPicContainer" href="#"><img class="fullwidth" src="../images/photography/explore.jpg"></a>
+					<a class="photoPicContainer" href="explore.html"><img class="fullwidth" src="../images/photography/explore.jpg"></a>
 					<p class="hovertext">Explore</p>
 					<p class="hoversubtext">Views from high altitudes above the city</p>
 				</div>
 				<div class="photocontainer ">
-					<a class="photoPicContainer" href="#"><img class="fullwidth" src="../images/photography/nature.jpg"></a>
+					<a class="photoPicContainer" href="nature.html"><img class="fullwidth" src="../images/photography/nature.jpg"></a>
 					<p class="hovertext">Nature</p>
 					<p class="hoversubtext">Getting away from the city</p>
 				</div>
 				<div class="photocontainer ">
-					<a class="photoPicContainer" href="#"><img class="fullwidth" src="../images/photography/portraits2.jpg"></a>
+					<a class="photoPicContainer" href="portraits.html"><img class="fullwidth" src="../images/photography/portraits2.jpg"></a>
 					<p class="hovertext">Portraits</p>
 					<p class="hoversubtext">Friends, family, and models</p>
 				</div>
